[gd_scene load_steps=23 format=2]

[ext_resource path="res://elements/Missle.gd" type="Script" id=1]
[ext_resource path="res://art/craftpix-781145-free-space-shooter-game-objects/PNG/Sprites/Missile/Missile_1_Explosion_000.png" type="Texture" id=2]
[ext_resource path="res://art/craftpix-781145-free-space-shooter-game-objects/PNG/Sprites/Missile/Missile_1_Explosion_001.png" type="Texture" id=3]
[ext_resource path="res://art/craftpix-781145-free-space-shooter-game-objects/PNG/Sprites/Missile/Missile_1_Explosion_002.png" type="Texture" id=4]
[ext_resource path="res://art/craftpix-781145-free-space-shooter-game-objects/PNG/Sprites/Missile/Missile_1_Explosion_003.png" type="Texture" id=5]
[ext_resource path="res://art/craftpix-781145-free-space-shooter-game-objects/PNG/Sprites/Missile/Missile_1_Explosion_004.png" type="Texture" id=6]
[ext_resource path="res://art/craftpix-781145-free-space-shooter-game-objects/PNG/Sprites/Missile/Missile_1_Explosion_005.png" type="Texture" id=7]
[ext_resource path="res://art/craftpix-781145-free-space-shooter-game-objects/PNG/Sprites/Missile/Missile_1_Explosion_006.png" type="Texture" id=8]
[ext_resource path="res://art/craftpix-781145-free-space-shooter-game-objects/PNG/Sprites/Missile/Missile_1_Explosion_007.png" type="Texture" id=9]
[ext_resource path="res://art/craftpix-781145-free-space-shooter-game-objects/PNG/Sprites/Missile/Missile_1_Explosion_008.png" type="Texture" id=10]
[ext_resource path="res://art/craftpix-781145-free-space-shooter-game-objects/PNG/Sprites/Missile/Missile_1_Flying_000.png" type="Texture" id=11]
[ext_resource path="res://art/craftpix-781145-free-space-shooter-game-objects/PNG/Sprites/Missile/Missile_1_Flying_001.png" type="Texture" id=12]
[ext_resource path="res://art/craftpix-781145-free-space-shooter-game-objects/PNG/Sprites/Missile/Missile_1_Flying_002.png" type="Texture" id=13]
[ext_resource path="res://art/craftpix-781145-free-space-shooter-game-objects/PNG/Sprites/Missile/Missile_1_Flying_003.png" type="Texture" id=14]
[ext_resource path="res://art/craftpix-781145-free-space-shooter-game-objects/PNG/Sprites/Missile/Missile_1_Flying_004.png" type="Texture" id=15]
[ext_resource path="res://art/craftpix-781145-free-space-shooter-game-objects/PNG/Sprites/Missile/Missile_1_Flying_005.png" type="Texture" id=16]
[ext_resource path="res://art/craftpix-781145-free-space-shooter-game-objects/PNG/Sprites/Missile/Missile_1_Flying_006.png" type="Texture" id=17]
[ext_resource path="res://art/craftpix-781145-free-space-shooter-game-objects/PNG/Sprites/Missile/Missile_1_Flying_007.png" type="Texture" id=18]
[ext_resource path="res://art/craftpix-781145-free-space-shooter-game-objects/PNG/Sprites/Missile/Missile_1_Flying_008.png" type="Texture" id=19]
[ext_resource path="res://art/craftpix-781145-free-space-shooter-game-objects/PNG/Sprites/Missile/Missile_1_Flying_009.png" type="Texture" id=20]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ) ],
"loop": false,
"name": "explode",
"speed": 20.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ) ],
"loop": true,
"name": "fly",
"speed": 20.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 8.01945
height = 28.5412

[node name="Missle" type="Area2D" groups=[
"evil",
]]
rotation = -1.5708
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.125, 0.125 )
frames = SubResource( 1 )
animation = "fly"
frame = 7
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -6 )
shape = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0, -0.356743 )
scale = Vector2( 1, 3.31882 )

[connection signal="body_entered" from="." to="." method="_on_Missle_body_entered"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
